--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "express": "3.4.2",
-    "jade" : "*",
-    "mongodb":"1.3.19",
+    "jade": "*",
+    "mongodb": "1.3.19",
     "ejs": "*",
-    "monk" : "0.7.1",
-    "jsdom" : "0.8.7"
+    "monk": "0.7.1",
+    "jsdom": "0.8.7",
+    "socket.io": "~1.0.6"
   }
 }
